@@ -22,17 +22,17 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'commons-net:commons-net:3.8.0'
-    compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
-    compile 'org.springframework:spring-beans:5.2.6.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.6.RELEASE'
-    compile 'com.io7m.xom:xom:1.2.10'
+    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+    implementation 'commons-net:commons-net:3.8.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    implementation 'org.springframework:spring-beans:5.2.7.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.2.7.RELEASE'
 
-    compile fileTree(dir: 'lib', include: '*.jar')
+    implementation fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
@@ -41,7 +41,7 @@ jar {
             'Built-By': System.getProperty('user.name'),
             'Built-Date': new Date(),
             'Built-JDK': System.getProperty('java.version'),
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+            'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
             'Main-Class': mainClassName
         )
     }
@@ -49,7 +49,7 @@ jar {
 
 distributions {
     main {
-        baseName = myAppName
+        distributionBaseName = myAppName
     }
 }
 
